KSENROLL-13292: UI Issue Manage Exam Offering - Action Icons Spacing
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@76352 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
@@ -2231,10 +2231,10 @@ padding-left: 0px !important;
 
 
 .uif-activity-offering-item-icon {
-
-  margin-right: 0 !important;
   margin-left: 0 !important;
-  padding-right: 5px !important;
+  margin-right: 0 !important;
+  padding-left: 0.5em;
+  padding-right: 0.2em !important;
 }
 
 
